<resources>
    <string name="app_name">PAM9Firebase</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="save">Simpan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="uid">Uid</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="google">Login With Google</string>
    <string name="welcome">Selamat Datang, </string>
    <string name="add_note">Tambah Note</string>
    <string name="client_id">885818715586-3a96iof4q8t9uu4bb94gol2pdjs7jbfo.apps.googleusercontent.com</string>
</resources>